Mario's comments for chapter 4 included
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5169 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -410,7 +410,7 @@ For shifts in the read-out direction, the condition \Eq{al sm con} reads (using 
 	- \vec d_i \cdot ( \De\vec a^n z_i + \De\vec b^n )\ .
 }{al sm shr sol}
 
-Since the \lhs{} does not depend on the event number $n$, neither must the \rhs{}. That is why the ${\De\vec a}=(\De a_x, \De a_y)^\T$ and ${\De\vec b=(\De b_x, \De b_y)^\T}$ vectors do not need to carry a superscript. These two vectors define the structure of the singular modes -- they correspond to \em{global} ($\De\vec b$) and \em{linearly-progressive} ($\De\vec a\, z_i$) shifts in $x$ and $y$. By global shift we mean a shift that is common for all sensors. The size of a linearly-progressive shift is proportional to the $z$-position of a sensor. There are four free parameters, thereby four singular modes. The situation is illustrated in \Fg{al sing modes shr}.
+Since the \lhs{} does not depend on the event number $n$, neither must the \rhs{}. That is why the ${\De\vec a}=(\De a_x, \De a_y)^\T$ and ${\De\vec b=(\De b_x, \De b_y)^\T}$ vectors do not need to carry a superscript. These two vectors define the structure of the singular modes -- they correspond to \em{global} ($\De\vec b$) and \em{linearly-progressive} ($\De\vec a\, z_i$) shifts in $x$ and $y$. By global shift we mean a shift that is common for all sensors. The size of a linearly-progressive shift is proportional to the $z$-position of a sensor. There are four free parameters (both $\De\vec a$ and $\De\vec b$ are two-dimensional), thereby four singular modes. The situation is illustrated in \Fg{al sing modes shr}.
 
 \fig{fig/pdf/al_sing_modes_shr.pdf}{al sing modes shr}{An illustration of the singular modes \Eq{al sm shr sol}: a front view on a sensor package. Each sensor is represented by a dot (its center $\vec c$) and an arrow (its read-out direction $\vec d$), cf.~the front view in \Fg{al proton sensor interaction}. The hollow dots mark the nominal positions, the solid ones represent the misalignment mode. For simplicity we have considered a simplified package of six sensors only (see the numbers), moreover with an equal spacing $\De z$. The $U$ (red) and $V$ (blue) sensors are regularly alternating, the first one is at $z = 0$.}
 
@@ -450,7 +450,7 @@ When applying the condition \Eq{al sm con} one shall keep both rotation and read
 		\De\vec c_i
 	)\ .
 }{al sm rotz con}
-In any realistic (non-pathological) geometry the vectors $(z_1, z_2, \ldots)^\T$, $(c_{x,1}, c_{x,2}, \ldots)^\T$, $(c_{y,1}, c_{y,2},\ldots)^\T$ and $(1, 1, \ldots)^\T$ are linearly independent. This means that the above condition can only be fulfilled if the coefficients to these vectors are equal on both sides of the equation:
+By comparing the $n$-dependent terms and the terms proportional to $z_i$ on both sides of the equation, one can split it into three conditions:
 \eqref{
 	\De\rh_i\, \vec\de_{\perp_g} \cdot \vec a^n = \vec\de_g \cdot \De\vec a^n\ ,\qquad
 	\De\rh_i\, \vec\de_{\perp_g} \cdot \vec b^n = \vec\de_g \cdot \De\vec b^n\ ,\qquad
@@ -477,6 +477,9 @@ For three and more groups, $\De\rh$ is a constant, thus there is just one singul
 
 \fig{fig/pdf/al_sing_modes_rotz.pdf}{al sing modes rotz}{An illustration of the singular modes \Eq{al sm rotz sol}: a front view on a sensor package. Each sensor is represented by a dot (its center $\vec c$) and an arrow (its read-out direction $\vec d$), cf.~the front view in \Fg{al proton sensor interaction}. The hollow dots and dashed arrows/lines show the nominal positions and read-out directions, the full dots and solid arrows represent the misalignment mode. For simplicity we have considered a simplified package of six sensors only (see the numbers), note that often they lie on top of each other in the drawing. Left: the case with two read-out groups, like in the nominal geometry, the $U$ (red) and $V$ (blue) sensors are alternating regularly. The $\De\vec c$ vector shows the accompanying read-out-direction shift \Eq{al sm rotz shr}. Right: a hypothetical situation with a third read-out group (sensor 4 drawn in green).
 }
+
+\vskip1\baselineskip
+\indent\em{Monte-Carlo tests}
 
 To illustrate the structure of the singular modes we have made a number of \abb{MC} studies. We have considered a series of geometries, starting with the nominal one and adding rotation misalignments to all sensors. These mis-rotations have been randomly generated according to a normal distribution with a variable variance. Going from zero variance to positive values represents a smooth transition from a geometry with two read-out groups to geometries with more groups. For certain alignment modes this means a transition from singular to non-singular state, see \Fg{al eig rho}.
 
@@ -565,7 +568,7 @@ It would be possible to draw a similar line of arguments for a situation where $
 At the end, let us remark that parallel tracks do not introduce new weak modes for the shifts in the read-out directions. The corresponding singular mode condition \Eq{al sm shr sol} is completely independent of the track slopes $\vec a^n$, therefore their vanishing spread makes no difference. Regarding the shifts in $z$, it makes little sense to consider the case of parallel tracks -- there the $z$-shifts can not be determined at all. The singular and weak modes for all considered configurations are summarized in \Tb{al sing mode overview}.
 
 \htab{al sing mode overview}{An overview of the singular and weak modes. The bold numbers give the number of singular/weak modes that are listed afterwards. The ''gl.'' abbreviation stands for ''global'' which is used to refer to a mode with constant coefficients for every sensor. The ''l.p.'' stands for ''linearly-progressive'' which means a mode the coefficients of which are proportional to $z_i$. Note that the additional modes for the parallel-track case are weak only.\hfil\break
-We have not considered the situation with one read-out group only. Such a detector apparatus could determine one hit position projection only and would thus be very different from the \abb{RP} detector system. Also, regarding the $z$-shifts, it makes no sense to consider a sample of parallel tracks. In that case the $\ga$ coefficients (see \Tb{al alignment quantities}) would all be constant and consequently the $z$-shift alignment would not be possible at all.
+We have not considered the situation with one read-out group only. Such a detector apparatus could determine one hit position projection only and would thus be very different from the \abb{RP} detector system. Also, regarding the $z$-shifts, it makes no sense to consider a sample of parallel tracks. In that case the $\ga$ coefficients (see \Tb{al alignment quantities}) would all be constant and consequently the $z$-shift alignment would not be possible at all. Formally, this corresponds to the number of singular modes as large as the number of sensors $N_{\rm sensors}$.
 }{
 \omit&\multispan{4}\bhrulefill\cr
 \omit			&\multispan2\bvrule\strut\hfil two read-out groups\hfil &\multispan2\strut\vrule\hfil three and more read-out groups\hfil\cr
@@ -578,11 +581,11 @@ We have not considered the situation with one read-out group only. Such a detect
 & \hbox{for $U$ and $V$ indep.} & \hbox{for $U$ and $V$ indep.}&&\cr\ln
 %
 & \hbox{{\bf 4}: gl. and l.p.} &  & \hbox{{\bf 2}: gl. and l.p.}  & \cr
-\hbox{shifts in }z	& \hbox{shifts in }z &-& \hbox{shift in }z&-\cr
+\hbox{shifts in }z	& \hbox{shifts in }z & N_{\rm sensors} & \hbox{shift in }z& N_{\rm sensors} \cr
 & \hbox{for $U$ and $V$ indep.} &&&\cr\bln
 }
 
-\subsection[al constr]{Constraints}
+\subsection[al constr]{Imposed constraints}
 
 In the previous section we have shown that the $\tilde\mat S$ is singular, which expresses the fact that some alignment modes are inaccessible to the track-based alignment. To accomplish the alignment task -- to solve the \Eq{al fit equation} -- one thus needs to supply the information about the inaccessible (singular) modes from another source. This information may be formulated in a form of additional \em{constraints} (to the alignment solution $\hat\vec\ch$) which compensates the singularity of the $\tilde\mat S$ matrix. We will consider a set of linear constraints
 
@@ -596,7 +599,7 @@ In the previous section we have shown that the $\tilde\mat S$ is singular, which
 	}\ ,\qquad
 	\hbox{$i$ enumerates the constraints,}
 }{al constraints}
-where $\vec c_i$ and $v_i$ are the constraint vectors and values. By construction, the dimension of the constraint vectors is given by the number of alignment corrections (i.e.~the dimension of the $\hat\vec\ch$ vector). These constraints require that the ``projection'' of the solution $\hat\vec\ch$ to the ``direction'' $\vec c_i$ is $v_i$. We have used the quotes since we do not require the vectors $\vec c_i$ to be of unit size. Still we find this interpretation of the constraints quite intuitive.
+where $\vec c_i$ and $v_i$ are the constraint vectors and values. By construction, the dimension of the constraint vectors is given by the number of alignment corrections (i.e.~the dimension of the $\hat\vec\ch$ vector). These constraints require that the ``projection'' of the solution $\hat\vec\ch$ to the ``direction'' $\vec c_i$ is $v_i$. We have used the quotes since we do not require the vectors $\vec c_i$ to be of unit size. Still we find this interpretation of the constraints quite intuitive. Notice that the elements of the $\mat C$ matrix and $\vec V$ vector may, in principle, have different units.
 
 The fit equation \Eq{al fit equation} has been derived by pursuing a least squares fit (simultaneously for misalignment and track parameters, see \Sc{al sim fit}). Now introducing the constraints, we have to deal with a constrained least squares problem. It can be addressed by the Lagrange-multipliers technique (see e.g.~\bref{millepede}):
 \eqref{
@@ -832,9 +835,9 @@ All our simulations have been done with the $220\un{m}$ station in sector 56. We
 Our first \abb{MC} tests have been to verify the statistical behavior of the alignment results. In particular how the statistical and systematic errors depend on the size of a track sample used. For each sample size we have generated 20 samples (with different random seeds). For each sample we have made two simulations, each followed by an alignment analysis. For the \em{realistic simulation}, the sensor hit positions have been rounded to the nearest (inter-)strip position (see \Sc{fast simu}) and fitted track parameters (that is $\hat\mat\Ga$) have been used. This corresponds to the alignment application to real data. The second simulation has been made to get a reference alignment result with no errors included. For this \em{reference simulation} the sensor hit positions have not been rounded and true track parameters (that is $\mat\Ga$) have been used. The alignment analyses have been performed in three iterations, yielding a result and its uncertainty estimate. Then, from the 20 samples of the same size we have calculated the following quantities.
 \eqref{\vbox{\halign{\quad\strut#\qquad&#\quad\cr\ln
 quantity & label\cr\ln
-\hbox{mean (realistic result - reference result)}	& \hbox{systematic error} \cr
-\hbox{standard deviation (realistic result - reference result)}& \hbox{statistical error} \cr
-\hbox{mean (realistic uncertainty)} 					& \hbox{estimated uncertainty} \cr\ln
+\hbox{mean (realistic result - reference result)}				& \hbox{systematic error} \cr
+\hbox{standard deviation (realistic result - reference result)}	& \hbox{statistical error} \cr
+\hbox{mean (realistic uncertainty, \Eq{al stat err chi})} 		& \hbox{estimated uncertainty} \cr\ln
 }}}{al stat quan def}
 Two examples of such statistical studies can be found in \Fg{al stat fixDet} (with a set of fixed-sensors constraints) and \Fg{al stat final} (with the final constraints).
 
@@ -858,7 +861,7 @@ In the above figures we have not showed any plots for the $z$ shifts. The reason
 
 Let us have a more detailed look at the weak modes now. From \Sc{al sing modes} we know there are two of them for \abb{TOTEM} \abb{RP}s: the rotation between $U$ and $V$ sensors and the rotation between far and near units. The former is, in fact, a singular mode for the nominal geometry (which comprises two read-out groups only), see \Tb{al sing mode overview}. However, because of rotation misalignments, the true geometry is not a two-group one and consequently the singular mode becomes weak only, see the transition in \Fg{al eig rho} (middle row).
 
-A similar transition is shown in \Fg{al err rotz rho}. Again, a series of geometries has been considered, starting with the nominal one and adding rotation misalignments, randomly generated according to a normal distribution with zero mean and standard deviation $\si_\rh$ (on the horizontal axis). For this plot, we have fixed the rotation of one sensor only: the first one in near-top \abb{RP}. It is a $V$ sensor. Consequently, the alignment uncertainties for all $V$ sensors (left plot) are practically $\si_\rh$-independent. In contrary for the $U$ sensors (right plot), the uncertainties grow with decreasing $\si_\rh$, as expected. The uncertainties for the far unit pots are higher than for the near unit (we recall that the fixed sensor is in the near one). This is related to the other weak mode (far-near unit rotation), which will be discussed later, in \Fg{al err rotz theta}. Focusing on the near unit, we see that for the expected misalignments (the dotted vertical line) the uncertainty for $V$ sensors is between $10^{-2}$ and $10^{-1}\un{mrad}$, while for the $U$ sensors it grows over $1\un{mrad}$. For this plot a sample of $10^5$ tracks has been used, it is a typical number for the \abb{LHC} runs. Now, comparing the results to the expected misalignments in \Tb{al exp misal}, drawn as the dotted horizontal line, we conclude that the track-based alignment can not provide reasonable corrections to the $U$ sensors' rotations. We recall that the $U$ sensors turn out to be problematic in this example as we have fixed the rotation of the $V$ sensors by the constraints. Generally, the troublesome mode is the relative rotation between $U$ and $V$ sensors.
+A similar transition is shown in \Fg{al err rotz rho}. Again, a series of geometries has been considered, starting with the nominal one and adding rotation misalignments, randomly generated according to a normal distribution with zero mean and standard deviation $\si_\rh$ (on the horizontal axis). For this plot, we have fixed the rotation of one sensor only: the first one in near-top \abb{RP}. It is a $V$ sensor. Consequently, the alignment uncertainties for all $V$ sensors (left plot) are practically $\si_\rh$-independent. In contrary for the $U$ sensors (right plot), the uncertainties grow with decreasing $\si_\rh$, as expected. The uncertainties for the far unit pots are higher than for the near unit (we recall that the fixed sensor is in the near one). This is related to the other weak mode (far-near unit rotation), which will be discussed later, in \Fg{al err rotz theta}. Focusing on the near unit, we see that for the expected misalignments (about $1\un{mrad}$ -- the dotted vertical line) the uncertainty for $V$ sensors is between $10^{-2}$ and $10^{-1}\un{mrad}$, while for the $U$ sensors it grows over $2\un{mrad}$. For this plot a sample of $10^5$ tracks has been used, it is a typical number for the \abb{LHC} runs. Now, comparing the results to the expected misalignments in \Tb{al exp misal}, drawn as the dotted horizontal line, we conclude that the track-based alignment can not provide reasonable corrections to the $U$ sensors' rotations. We recall that the $U$ sensors turn out to be problematic in this example as we have fixed the rotation of the $V$ sensors by the constraints. Generally, the troublesome mode is the relative rotation between $U$ and $V$ sensors.
 
 \fig{fig/pdf/al_err_rotz_rho.pdf}{al err rotz rho}{The estimated uncertainty of the rotations about $z$ as a function of geometry. The geometries considered have been derived from the nominal one by applying rotation misalignments to each sensor. These misalignments have been randomly generated according to a normal distribution with zero mean and variance $\si_\rh^2$ (the quantity on the horizontal axis). The expected misalignment is marked by the vertical dotted line. The simulations have been done with $10^5$ events, track angular spread $\si_a = 0.1\un{mrad}$ and a set of fixed-sensors constraints. The only sensor with fixed rotation has been the first one in the top-near \abb{RP} (it is a $V$ sensor). Each line corresponds to the uncertainty of the 2nd or 3rd sensor (according to its $U$ or $V$ orientation) of a \abb{RP}. Solid lines have been used for \abb{RP}s in the near, dashed for \abb{RP}s in the far unit. The lines for far vertical pots are overlapping. The horizontal dotted line shows the expected rotation misalignment.
 %No misalignment (misaligned and real geometry contain detectors rotated with the given rho distribution).  Extfit=false. fix-bas, 1 iteration, 1 repetition
@@ -866,7 +869,7 @@ A similar transition is shown in \Fg{al err rotz rho}. Again, a series of geomet
 
 The other weak mode is related to the rotation between far and near units. In fact, what we have derived in \Eq{al sm rotz sol la}, is a linearly progressive rotation. But looking at the structure of $220\un{m}$ stations (see \Tb{ttm rp station}), we see that the \abb{RP}s cluster into two units -- each about $45\un{cm}$ in length and separated by about $5.5\un{m}$. Since their distance is much higher than their size, the linearly progressive rotation effectively reduces to a rotation of the near unit and a rotation of the far unit. Moreover, the global rotation must be constrained (see the singular mode \Eq{al sm rotz sol}), thus what is left for the weak mode is the relative far-near unit rotation.
 
-As indicated by \Fg{al eig theta}, the weakness of this mode depends on the angular spread $\si_a$ of the tracks used. Since the weakness is related to the alignment uncertainty, see \Eq{al fit eq eigen one}, one may expect growing uncertainty with reducing angular spread (and increasing weakness of the weak mode). This trend is well confirmed by \Fg{al err rotz theta}. For that figure we have fixed the rotations of the first two sensors (that is one $U$ and one $V$ sensor) in the near-top pot. The uncertainties of near top and bottom pot (having the same $z$ position) are practically flat. The near horizontal pot, being about $45\un{cm}$ from the constrained sensors, already feels some dependence on the angular spread. For the pots in the far unit the effect is even stronger. Considering a realistic value of the angular spread $\si_a =  0.1\un{mrad}$ and a typical number of tracks $10^5$ (see \Tb{al lhc datasets}), the uncertainty is $10^{-1}$ to $10^{-2}\un{mrad}$ for near and about $1\un{mrad}$ for far unit \abb{RP}s. This is to be compared with the expected misalignments from \Tb{al exp misal} (drawn as the horizontal dotted line). One may conclude that the track-based alignment can hardly improve our knowledge on the far-near unit rotation.
+As indicated by \Fg{al eig theta}, the weakness of this mode depends on the angular spread $\si_a$ of the tracks used. Since the weakness is related to the alignment uncertainty, see \Eq{al fit eq eigen one}, one may expect growing uncertainty with reducing angular spread (and increasing weakness of the weak mode). This trend is well confirmed by \Fg{al err rotz theta}. For that figure we have fixed the rotations of the first two sensors (that is one $U$ and one $V$ sensor) in the near-top pot. The uncertainties of near top and bottom pot (having the same $z$ position) are practically flat. The near horizontal pot, being about $45\un{cm}$ from the constrained sensors, already feels some dependence on the angular spread. For the pots in the far unit the effect is even stronger. Considering a realistic value of the angular spread $\si_a =  0.1\un{mrad}$ (vertical dotted line) and a typical number of tracks $10^5$ (see \Tb{al lhc datasets}), the rotation uncertainty is $10^{-1}$ to $10^{-2}\un{mrad}$ for near and about $1\un{mrad}$ for far unit \abb{RP}s. This is to be compared with the expected misalignments from \Tb{al exp misal} (drawn as the horizontal dotted line). One may conclude that the track-based alignment can hardly improve our knowledge on the far-near unit rotation.
 
 Let us repeat the reason for the saturation at the high-$\si_a$ side of \Fg{al err rotz theta}. The maximal angle that can be detected by both units simultaneously is about $10^{-2}\un{rad}$, therefore even if the track sample includes higher angle tracks, they do not contribute to the alignment analysis.
 
@@ -1064,7 +1067,7 @@ We have also analyzed data from a number of 2010 \abb{LHC} runs (see the list in
 %ext2 constraints
 }
 
-Let us conclude the comparisons (generally, even for the ten other comparisons not shown). First observation is that all \abb{LHC} results are perfectly consistent with each other. Similarly, there is no remarkable difference between the \abb{H8} analyses using the full sample or any of the subsamples. These are, with no doubt, pleasant outcomes. Generally, the match is better for the rotations. Regarding the optical metrology this might be partially understood by noticing that a part (systematic shift) of the measurement errors cancels for rotations in \Eq{al metrology ext}. Also quite generally, the \abb{H8} and \abb{LHC} results match better together than with the optical metrology. This might be an indication that the hybrid-to-hybrid alignment not taken into account in the optical metrology, is in fact important. The difference between the \abb{H8} and \abb{LHC} results may be understood as a consequence of different temperatures of the pots. Due to the thermal expansion, the mechanical stresses might lay out slightly differently, provoking slightly different misalignments.
+Let us conclude the comparisons (generally, even for the ten other comparisons not shown). First observation is that all \abb{LHC} results are perfectly consistent with each other. Similarly, there is no remarkable difference between the \abb{H8} analyses using the full sample or any of the subsamples. These are, with no doubt, pleasant outcomes. Generally, the match is better for the rotations. Regarding the optical metrology this might be partially understood by noticing that a part (systematic shift) of the measurement errors cancels for rotations in \Eq{al metrology ext}. Also quite generally, the \abb{H8} and \abb{LHC} results match better together than with the optical metrology. This might be an indication that the hybrid-to-hybrid alignment not taken into account in the optical metrology, is in fact important. The difference between the \abb{H8} and \abb{LHC} results may be understood as a consequence of different temperatures of the pots. Due to the thermal expansion, the mechanical stresses might be slightly different, provoking slightly different misalignments.
 
 
 \subsection[al lhc res]{LHC alignment results}
@@ -1237,7 +1240,7 @@ The parameters $a$ and $b$ give the slope and intercept of the line along which 
 Our third cut comes out from the observation that the elastic hits cumulate along a slightly-tilted vertical axis (see \Fg{al prof hits}). Denoting the tilt $a$ and considering that this axis shall go through the beam center $(-\De x, -\De y)$ yields the following relation.
 \eqref{x \approx ay + \underbrace{a \De y - \De x}_{b}\ .}{al el x} 
 
-All the cuts \Eq{al el dxdx,al el dyy,al el x} require ``the distance from a certain line to be smaller than a given threshold'', see the summary \Tb{al el cuts}. The distribution of events around the cut lines has two sources: the beam smearing and the proton transport approximations that we have made. These distributions have a Gaussian shape as can be seen in \Fg{al el selection} and their standard deviations have been used to set the cut thresholds -- they correspond to about $2.5$ multiple of the standard deviation.
+All the cuts \Eq{al el dxdx,al el dyy,al el x} require ``the distance from a certain line to be smaller than a given threshold'', see the summary \Tb{al el cuts}. The distribution of events around these lines has two sources: the beam smearing and the proton transport approximations that we have made. These distributions have a Gaussian shape as can be seen in \Fg{al el selection} and their standard deviations have been used to set the cut thresholds -- they correspond to about $2.5$ standard deviations.
 
 
 \tab[\quad\bstrut\hfil\ #\ \hfil&\ #\ \hfil&\hfil\ #\ \hfil\qquad\cr]{al el cuts}{The cuts used for the elastic-event selection. The threshold gives the maximal permitted distance from the line. This permitted region is drawn as a green band in \Fg{al el selection}.}{\ln
@@ -1253,7 +1256,7 @@ Let us note that one could build more elastic-selection cuts than presented in \
 
 Since the relations \Eq{al el dxdx,al el dyy,al el x} involve the misalignment parameters, they can be used for alignment too. In the rest of this section we will present several alignment methods. The first one is dedicated to the horizontal alignment, methods two to four to the vertical alignment.
 
-\fig{fig/pdf/al_el_selection.pdf}{al el selection}{An illustration of the elastic-event selection cuts (data from 21 September). Each row corresponds to one cut. Left: the events before (black) and after (red) the cut. The light-green area represents the cut requirement. Right: the distribution of events around the cut line (black) with a Gaussian fit (red). The dotted lines show the cut thresholds, cf. \Tb{al el cuts}.}
+\fig{fig/pdf/al_el_selection.pdf}{al el selection}{An illustration of the elastic-event selection cuts (data from 21 September). Each row corresponds to one cut. Left: the events before (black) and after (red) the cut. The light-green area represents the cut requirement. Right: the distribution of events around the light-green band centre (black) with a Gaussian fit (red). The dotted lines show the cut thresholds, cf. \Tb{al el cuts}.}
 
 \block{Method 1}
 
@@ -1352,7 +1355,7 @@ The results are summarized in \Tb{al el dyy}. For the data set from 29-30 Octobe
 Since the optical length differs between the sectors about $10\percent$ and the vertical misalignment scale is about $100\un{\mu m}$  (see \Eq{al window to dp uncer}), one can write
 \eqref{b = \De y^{45} - \De y^{56} + \O{10\un{\mu m}}\ .}{al el yy b}
 
-The parameters $a$ and $b$ have been obtained by fitting as in methods 1 and 3. But before fitting, we have removed tips of the distributions that are affected by the acceptance. These are tips of triangular shape extending towards the point $y_{45} = y_{56} = 0\un{mm}$. Since they are not symmetric about the fit line and since they are densely populated, they might bias the fit results. The fits are illustrated in \Fg{al el plots ylyr}.
+The parameters $a$ and $b$ have been obtained by fitting as in methods 1 and 3. But before fitting, we have removed the tips of the distributions that are affected by the acceptance. These are the tips of triangular shape extending towards the point $y_{45} = y_{56} = 0\un{mm}$. Since they are not symmetric about the fit line and since they are densely populated, they might bias the fit results. The fits are illustrated in \Fg{al el plots ylyr}.
 
 \fig{fig/pdf/al_el_plots_ylyr.pdf}{al el plots ylyr}{An illustration of the alignment method 4 (220-far units). The green line is a fit according to the parameterization \Eq{al el yy}.}
 
